--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 							<div class="welcome-block">
 								<h3>Sandro Sánchez</h3>								
 						     	 <div class="message-body">
-									<img src="./img/Sandro.jpg" class="pull-left" alt="member">
+									<img src="./img/sandro.jpg" class="pull-left" alt="member">
 						       		<p> líder comprometido con la representación de su comunidad en el ámbito político. Es alguien que escucha atentamente las inquietudes 
 										de sus electores y trabaja incansablemente para convertirlas en acciones concretas en el parlamento. 
 										Posee un profundo sentido de responsabilidad cívica y se esfuerza por tomar decisiones informadas y equitativas 
